# seaserver

./: .gitignore  artists-credit.txt  build-all-desktop-stats.json  build-all-desktop.ps1  build-all-desktop.sh  build-all-stats.json  build-all.sh  death-march-theme.ts  fix-holyland.mjs  fix-last-3.mjs  fix-missing-4.mjs  go.mod  go.sum  stash-docker-compose.yml  update-theme-backgrounds-v2.mjs  update-theme-backgrounds.mjs  update-theme-backgrounds.ps1  zom-100-theme.ts
.github/agents/: test.agent.md
codegen/internal/: generate_structs.go  generate_ts_endpoints.go
internal/achievement/: cat_anime.go  cat_manga.go  cat_meta.go  definitions.go  engine.go  icons.go
internal/continuity/: history.go  manager.go
internal/core/: anilist.go  anilist_client_manager.go  app.go  config.go  extensions.go  migrations.go  modules.go  profile.go  profile_migration.go  profile_paths.go  profile_session.go  service_runner.go
internal/cron/: cron.go
internal/customsource/: customsource.go
internal/directstream/: debridstream.go  localfile.go  nakama.go  stream.go  torrentstream.go
internal/enmasse/: downloader.go  global_downloader.go  manga_downloader.go  manga_match_tracking.go  rate_limiter.go
internal/events/: endpoints.go  events.go  websocket.go
internal/extension/: bank.go
internal/extension_repo/: goja.go  (+2 more)
seanime-desktop/: package-lock.json
seanime-desktop/src-tauri/: Cargo.toml
seanime-desktop/src-tauri/src/: config.rs  lib.rs  tray.rs
seanime-web/: index.html  package-lock.json  package.json  rsbuild.config.ts  tailwind.config.ts  tsconfig.json
(+931 files in other folders)
