[package]
name = "seanime-desktop"
version = "0.1.0"
description = "seaserver Desktop"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon", "devtools"] }
tauri-plugin-shell = "2.3.5"
strip-ansi-escapes = "0.2.1"
tokio = "1.43.0"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-updater = "2.10.1"
